# learnit-anki

./: .env.example  .gitignore  Makefile  README.md  all_code.txt  article.txt  concat.sh  create.sh  docker-compose.yml  main.swift  pyproject.toml
adapters/anki/: genanki_exporter.py
adapters/audio/: google_tts_adapter.py
adapters/dictionary/: openai_dictionary_adapter.py
adapters/grammar/: openai_grammar_adapter.py
adapters/translation/: deepl_adapter.py  openai_adapter.py
core/domain/: interfaces.py  models.py
core/use_cases/: generate_card.py  generate_deck.py  search_sentences.py
docker/: Dockerfile.local  Dockerfile.prod
docs/: add_to_existing_deck.md  quick_start_guide.md
infrastructure/api/: main.py
infrastructure/cli/: importers.py  main.py
infrastructure/config/: dependency_injection.py  settings.py
infrastructure/database/: models.py  repository.py
infrastructure/jobs/: celery_app.py
input/: louve_heist.txt
learnit-deck/learnit-deck/: ContentView.swift  Item.swift  learnit_deckApp.swift
learnit-deck/learnit-deck.xcodeproj/: project.pbxproj
learnit-deck/learnit-deck.xcodeproj/project.xcworkspace/xcuserdata/bordumb.xcuserdatad/: UserInterfaceState.xcuserstate
learnit-deck/learnit-deck.xcodeproj/xcuserdata/bordumb.xcuserdatad/xcschemes/: xcschememanagement.plist
learnit-deck/learnit-deckTests/: learnit_deckTests.swift
learnit-deck/learnit-deckUITests/: learnit_deckUITests.swift  learnit_deckUITestsLaunchTests.swift
tests/: mocks.py
tests/unit/: test_generate_card_use_case.py
