# pyproject.toml
[tool.poetry]
name = "anki-card-generator"
version = "0.1.0"
description = "Automate French flashcard creation for Anki"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
genanki = "^0.13.1"
httpx = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
google-cloud-texttospeech = "^2.16.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"